--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     
         <div id="container">
             <div class="bg-img"></div>
-            <div class="animate-title inview">Beautiful Spring in Japan</div>
-            <div class="animate-title2 inview">SAKURA</div>
+            <div class="animate-title">Beautiful Spring in Japan</div>
+            <div class="animate-title2">SAKURA</div>
         </div>
         
 
