--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <div class="bg-img"></div>
             <div class="animate-title">Beautiful Spring in Japan</div>
             <div class="animate-title2">SAKURA</div>
+            <button class="btn">START</button>
         </div>
         
 
