--- a/dep/index.html
+++ b/dep/index.html
@@ -10,10 +10,19 @@
   <body>
     <div id="container">
       <div class="bg-img"></div>
-      <div class="gsap-animate-title">Beautiful Spring in JapanBeautiful Spring in JapanBeautiful Spring in JapanBeautiful Spring in JapanBeautiful Spring in Japan</div>
+      <div class="animate-title">Beautiful Spring in Japan</div>
+    </div>
+    <div id="container">
+      <div class="bg-img1 inview"></div>
+      <div class="animate-title">Beautiful Spring in Japan</div>
+    </div>
+    <div id="container">
+      <div class="bg-img2 inview"></div>
+      <div class="animate-title">Beautiful Spring in Japan</div>
     </div>
 
     <script src="gsap.min.js"></script>
+    <script src="text-animation.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
