--- a/dep/index.html
+++ b/dep/index.html
@@ -9,19 +9,20 @@
   </head>
   <body>
     <div id="container">
-      <div class="bg-img"></div>
+      <div class="bg-img pic"></div>
       <div class="animate-title">Beautiful Spring in Japan</div>
     </div>
     <div id="container">
-      <div class="bg-img1 inview"></div>
+      <div class="bg-img1 pic"></div>
       <div class="animate-title">Beautiful Spring in Japan</div>
     </div>
     <div id="container">
-      <div class="bg-img2 inview"></div>
+      <div class="bg-img2 pic"></div>
       <div class="animate-title">Beautiful Spring in Japan</div>
     </div>
 
     <script src="gsap.min.js"></script>
+    <script src="img-animation.js"></script>
     <script src="text-animation.js"></script>
     <script src="main.js"></script>
   </body>
