--- a/dep/index.html
+++ b/dep/index.html
@@ -8,22 +8,29 @@
     <title>Document</title>
   </head>
   <body>
+    <div class="index">
+      practiced text-animation. it will be a long time before I get used to
+      using reduce. Tried to find a suitable min.js from github like animation.
+      I decided to split the js file because the main.js description became too
+      much.
+    </div>
     <div id="container">
       <div class="bg-img pic"></div>
       <div class="animate-title">Beautiful Spring in Japan</div>
     </div>
     <div id="container">
       <div class="bg-img1 pic"></div>
-      <div class="animate-title">Beautiful Spring in Japan</div>
+      <div class="animate-title">Beautiful Summer in Japan</div>
     </div>
     <div id="container">
       <div class="bg-img2 pic"></div>
-      <div class="animate-title">Beautiful Spring in Japan</div>
+      <div class="animate-title">Beautiful Autumn in Japan</div>
     </div>
 
     <script src="gsap.min.js"></script>
     <script src="img-animation.js"></script>
     <script src="text-animation.js"></script>
+    <script src="splittext.min.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
