--- a/animation with splittext/index.html
+++ b/animation with splittext/index.html
@@ -4,15 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href='//fonts.googleapis.com/css?family=Asap:400,700' rel='stylesheet' type='text/css'>
+    <link
+      href="//fonts.googleapis.com/css?family=Asap:400,700"
+      rel="stylesheet"
+      type="text/css"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <div id="quote">
-        SplitText makes it easy to break apart the text in an HTML element so that each character, word, and/or line is wrapped in its own div tag.
+      SplitText makes it easy to break apart the text in an HTML element so that
+      each character, word, and/or line is wrapped in its own div tag.
     </div>
-    
+
     <button id="animate">animate</button>
     <script src="../dep/gsap.min.js"></script>
     <script src="splittext.min.js"></script>
