--- a/dep/index.html
+++ b/dep/index.html
@@ -26,8 +26,14 @@
       <div class="bg-img2 pic"></div>
       <div class="animate-title">Beautiful Autumn in Japan</div>
     </div>
+    <div id="container">
+      <div class="bg-img3 pic"></div>
+      <div class="animate-title">Beautiful Winter in Japan</div>
+    </div>
 
+    <script src="intersection-observer.js"></script>
     <script src="gsap.min.js"></script>
+    <script src="scroll.js"></script>
     <script src="img-animation.js"></script>
     <script src="text-animation.js"></script>
     <script src="splittext.min.js"></script>
