--- a/dep/index.html
+++ b/dep/index.html
@@ -30,6 +30,20 @@
       <div class="bg-img3 pic"></div>
       <div class="animate-title">Beautiful Winter in Japan</div>
     </div>
+    <div id="section">
+      <div class="cover-slide hover-darken">
+        <img class="img-zoom" src="images/AdobeStock_336729630_Preview.jpeg" alt="" />
+      </div>
+      <div class="cover-slide hover-darken">
+        <img class="img-zoom" src="images/AdobeStock_538557443_Preview.jpeg" alt="" />
+      </div>
+      <div class="cover-slide hover-darken">
+        <img class="img-zoom" src="images/AdobeStock_583058423_Preview.jpeg" alt="" />
+      </div>
+      <div class="cover-slide hover-darken">
+        <img class="img-zoom" src="images/AdobeStock_590648834_Preview.jpeg" alt="" />
+      </div>
+    </div>
 
     <script src="intersection-observer.js"></script>
     <script src="gsap.min.js"></script>
