--- a/dep/index.html
+++ b/dep/index.html
@@ -49,8 +49,8 @@
     </div>
 
 
-    <script src="intersection-observer.js"></script>
-    <script src="gsap.min.js"></script>
+    <script src="../node_modules/intersection-observer/intersection-observer.js"></script>
+    <script src="../node_modules/gsap/dist/all.js"></script>
     <script src="scroll.js"></script>
     <script src="img-animation.js"></script>
     <script src="text-animation.js"></script>
