--- a/dep/index.html
+++ b/dep/index.html
@@ -9,7 +9,9 @@
   </head>
   <body>
     <div class="index">
-      Today's challenge was a struggle; I inserted the code into DOMContentLoaded for you and it cleared up. However, I did not fully understand class inheritance and the challenge remained.
+      Today's challenge was a struggle; I inserted the code into
+      DOMContentLoaded for you and it cleared up. However, I did not fully
+      understand class inheritance and the challenge remained.
     </div>
     <div id="container">
       <div class="bg-img pic"></div>
@@ -29,25 +31,34 @@
     </div>
     <div id="section">
       <div class="cover-slide hover-darken">
-        <img class="img-zoom" src="images/AdobeStock_336729630_Preview.jpeg" alt="" />
+        <img
+          class="img-zoom"
+          src="images/AdobeStock_336729630_Preview.jpeg"
+          alt=""
+        />
       </div>
       <div class="cover-slide hover-darken">
-        <img class="img-zoom" src="images/AdobeStock_538557443_Preview.jpeg" alt="" />
+        <img
+          class="img-zoom"
+          src="images/AdobeStock_538557443_Preview.jpeg"
+          alt=""
+        />
       </div>
       <div class="cover-slide hover-darken">
-        <img class="img-zoom" src="images/AdobeStock_581484645_Preview.jpeg" alt="" />
+        <img
+          class="img-zoom"
+          src="images/AdobeStock_581484645_Preview.jpeg"
+          alt=""
+        />
       </div>
       <div class="cover-slide hover-darken">
-        <img class="img-zoom" src="images/AdobeStock_583058423_Preview.jpeg" alt="" />
+        <img
+          class="img-zoom"
+          src="images/AdobeStock_583058423_Preview.jpeg"
+          alt=""
+        />
       </div>
     </div>
-        <img class="img-zoom" src="images/AdobeStock_583058423_Preview.jpeg" alt="" />
-      </div>
-      <div class="cover-slide hover-darken">
-        <img class="img-zoom" src="images/AdobeStock_590648834_Preview.jpeg" alt="" />
-      </div>
-    </div>
-
 
     <script src="../node_modules/intersection-observer/intersection-observer.js"></script>
     <script src="../node_modules/gsap/dist/all.js"></script>
@@ -58,3 +69,5 @@
     <script src="main.js"></script>
   </body>
 </html>
+intersection-observer/intersection-observer.js
+/Users/shanbianchun/.Trash/front-dev-testcoding/node_modules/intersection-observer/intersection-observer.js
