--- a/Character animation/index.html
+++ b/Character animation/index.html
@@ -1,28 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
-</head>
-<body>
-<section>
-    <div class="animation-title">title1</div>
-</section>
-<section>
-    <div class="animation-title">title2</div>
-</section>
-<section>
-    <div class="animation-title">title3</div>
-</section>
+  </head>
+  <body>
+    <section>
+      <div class="animation-title">title1</div>
+    </section>
+    <section>
+      <div class="animation-title">title2</div>
+    </section>
+    <section>
+      <div class="animation-title">title3</div>
+    </section>
 
-
-
-
-<script src="TweenMax.min.js"></script>
-<script src="TextAnimation.js"></script>
+    <script src="TweenMax.min.js"></script>
+    <script src="TextAnimation.js"></script>
+    <script src="scroll-polyfill.js"></script>
+    <script src="scroll.js"></script>
     <script src="app.js"></script>
-</body>
+  </body>
 </html>
